<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"

    android:fitsSystemWindows="true"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        android:theme="@style/EditTextHint">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/scopus_image"
            android:src="@drawable/scopus"
            android:theme="@style/EditTextHint" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/enter_authors_s_first_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/EditTextHint">

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@android:color/white"
                android:hint="@string/enter_authors_s_last_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <android.widget.Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:padding="12dp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</ScrollView>